--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
+    <!-- SITE-HEADER-HERO-WRAPPER  -->
+    <div class="site-header-hero-wrapper">
+        <!-- SITE-HEADER  -->
+        <header class="site-header">
+            <div class="site-header__container container">
+                <a href="undex.html" class="site-header__logo logo">
+                    <img class="logo__img" src="imgs/workit.svg" alt="Workit logo" width="97" height="26">
+                </a>
+
+                <a href="#" class="undrline-link">Apply for access</a>
+            </div>
+        </header>
+
+        <!-- HERO -->
+        <div class="hero">
+            <div class="container">
+                <h1>Data <span class="underline-text">tailored</span> to your needs.</h1>
+                <a href="#" class="button">Loren more</a>
+
+                <picture>
+                    <source srcset="imgs/image-hero.png">
+                    <img src="imgs/image-hero.png" alt="Phone with statistics illustration on the sceen" width="767" height="441
+                    srcset="imgs/image-hero.png 1x, imgs/image-hero@2x.png 2x">
+                </picture>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
