--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
                     <img class="logo__img" src="imgs/workit.svg" alt="Workit logo" width="97" height="26">
                 </a>
 
-                <a href="#" class="undrline-link">Apply for access</a>
+                <a href="#" class="underline-link">Apply for access</a>
             </div>
         </header>
 
         <!-- HERO -->
         <div class="hero">
-            <div class="container">
-                <h1>Data <span class="underline-text">tailored</span> to your needs.</h1>
-                <a href="#" class="button">Loren more</a>
+            <div class="hero__container container">
+                <h1 class="hero__heading">Data <span class="underline-text">tailored</span> to your needs.</h1>
+                <a href="#" class="hero__button button">Loren more</a>
 
                 <picture>
                     <source srcset="imgs/image-hero.png">
