--- a/index.html
+++ b/index.html
@@ -27,14 +27,45 @@
                 <h1 class="hero__heading">Data <span class="underline-text">tailored</span> to your needs.</h1>
                 <a href="#" class="hero__button button">Loren more</a>
 
-                <picture>
+                <picture class="hero__picture">
+                    <source srcset="imgs/image-hero-mobile.png 1x, imgs/image-hero-mobile@2x.png 2x" media="(max-width:500px)">
+                    <source srcset="imgs/image-hero-tablet.png 1x, imgs/image-hero-tablet@2x.png 2x" media="(max-width:768px)">
                     <source srcset="imgs/image-hero.png">
-                    <img src="imgs/image-hero.png" alt="Phone with statistics illustration on the sceen" width="767" height="441
+                    <img class="hero__img" src="imgs/image-hero.png" alt="Phone with statistics illustration on the sceen" width="767" height="441
                     srcset="imgs/image-hero.png 1x, imgs/image-hero@2x.png 2x">
                 </picture>
             </div>
         </div>
     </div>
+
+    <main class="main-content">
+        <!-- FEATURES -->
+        <section class="features">
+            <div class="container">
+                <h2 class="visually-hidden">Features</h2>
+                <ul class="features__list">
+                    <li class="features__item feature">
+                        <div class="feature__inner">
+                            <h3 class="feature__title">Actionable insights</h3>
+                            <p class="feature__description">Optimize your products, improve customer satisfaction and stay ahead of the competition with our product data analytics.</p>
+                        </div>
+                    </li>
+                    <li class="features__item feature">
+                        <div class="feature__inner">
+                            <h3 class="feature__title">Data-driven decisions</h3>
+                            <p class="feature__description">Make data-driven decisions with our product data analytics. Our AI-generated reports help you unlock insights hidden in your product data.</p>
+                        </div>
+                    </li>
+                    <li class="features__item feature">
+                       <div class="feature__inner">
+                           <h3 class="feature__title">Always affordable</h3>
+                           <p class="feature__description">Always affordable pricing that scales with your business. Get top-quality product data analytics services without hidden costs or unexpected fees.</p>
+                       </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
 
