--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Workit Site</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="test-cta__inner">
                     <picture class="test-cta__picture">
-                        <source srcset="imgs/img-founder-tablet.jpg 1x, imgs/img-founder-tablet@2x.jpg 2x" media="(max-width: 768px)">
+                        <source srcset="imgs/img-founder-tablet.jpg 1x, imgs/img-founder-tablet@2x.jpg 2x" media="(max-width: 1024px)">
                         <img class="test-cta__img" src="imgs/img-founder.jpg" alt="Founder of workit smiling" width="477" height="477" srcset="imgs/img-founder.jpg 1x, imgs/img-founder@2x.jpg">
                     </picture>
                     <div class="test-cta__box">
@@ -83,6 +83,42 @@
             </div>
         </section>
     </main>
+
+    <!-- SITE-FOOTER -->
+
+    <footer class="site-footer">
+        <div class="site-footer__container container">
+            <a href="undex.html" class="site-footer__logo logo">
+                <img class="logo__img" src="imgs/workit-dark-purple.png" alt="Workit logo" width="97" height="26">
+            </a>
+    
+            <div class="socials">
+                <ul class="socials__list">
+                    <li class="socials__item">
+                        <a class="socials__link" href="#" target="_blank" aria-label="Facebook page">
+                            <svg class="socials__icon" width="20" height="20" viewBox="0 0 20 20"  xmlns="http://www.w3.org/2000/svg">
+                                <path fill="currentColor" d="M18.8958 -0.00012207H1.10417C0.494167 -0.00012207 0 0.494045 0 1.10404V18.8965C0 19.5057 0.494167 19.9999 1.10417 19.9999H10.6833V12.2549H8.07667V9.23654H10.6833V7.01071C10.6833 4.42738 12.2608 3.02071 14.5658 3.02071C15.67 3.02071 16.6183 3.10321 16.895 3.13988V5.83988L15.2967 5.84071C14.0433 5.84071 13.8008 6.43654 13.8008 7.30988V9.23738H16.79L16.4008 12.2557H13.8008V19.9999H18.8975C19.5058 19.9999 20 19.5057 20 18.8957V1.10404C20 0.494045 19.5058 -0.00012207 18.8958 -0.00012207Z" fill="#584D62"/>
+                            </svg>                                
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a class="socials__link" href="#" target="_blank" aria-label="Twitter page">
+                            <svg class="socials__icon" width="20" height="17" viewBox="0 0 20 17"  xmlns="http://www.w3.org/2000/svg">
+                                <path fill="currentColor" d="M20 2.39621C19.2642 2.72288 18.4733 2.94288 17.6433 3.04205C18.4908 2.53455 19.1417 1.73038 19.4475 0.772046C18.655 1.24205 17.7767 1.58371 16.8417 1.76788C16.0942 0.970379 15.0267 0.472046 13.8467 0.472046C11.1975 0.472046 9.25083 2.94371 9.84917 5.50955C6.44 5.33871 3.41667 3.70538 1.3925 1.22288C0.3175 3.06705 0.835 5.47955 2.66167 6.70121C1.99 6.67955 1.35667 6.49538 0.804167 6.18788C0.759167 8.08871 2.12167 9.86705 4.095 10.2629C3.5175 10.4195 2.885 10.4562 2.24167 10.3329C2.76333 11.9629 4.27833 13.1487 6.075 13.182C4.35 14.5345 2.17667 15.1387 0 14.882C1.81583 16.0462 3.97333 16.7254 6.29 16.7254C13.9083 16.7254 18.2125 10.2912 17.9525 4.52038C18.7542 3.94121 19.45 3.21871 20 2.39621Z" fill="#584D62"/>
+                            </svg>                                
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a class="socials__link" href="#" target="_blank" aria-label="Instagram  page">
+                            <svg class="socials__icon" width="20" height="21" viewBox="0 0 20 21"  xmlns="http://www.w3.org/2000/svg">
+                                <path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd" d="M10 0.223999C7.28417 0.223999 6.94417 0.235666 5.8775 0.283999C2.24583 0.450666 0.2275 2.46567 0.0608333 6.10067C0.0116667 7.16817 0 7.50817 0 10.224C0 12.9398 0.0116667 13.2807 0.06 14.3473C0.226667 17.979 2.24167 19.9973 5.87667 20.164C6.94417 20.2123 7.28417 20.224 10 20.224C12.7158 20.224 13.0567 20.2123 14.1233 20.164C17.7517 19.9973 19.775 17.9823 19.9392 14.3473C19.9883 13.2807 20 12.9398 20 10.224C20 7.50817 19.9883 7.16817 19.94 6.1015C19.7767 2.47317 17.7592 0.451499 14.1242 0.284832C13.0567 0.235666 12.7158 0.223999 10 0.223999ZM10 2.0265C12.67 2.0265 12.9867 2.0365 14.0417 2.08483C16.7517 2.20817 18.0175 3.494 18.1408 6.184C18.1892 7.23817 18.1983 7.55483 18.1983 10.2248C18.1983 12.8957 18.1883 13.2115 18.1408 14.2657C18.0167 16.9532 16.7542 18.2415 14.0417 18.3648C12.9867 18.4132 12.6717 18.4232 10 18.4232C7.33 18.4232 7.01333 18.4132 5.95917 18.3648C3.2425 18.2407 1.98333 16.949 1.86 14.2648C1.81167 13.2107 1.80167 12.8948 1.80167 10.224C1.80167 7.554 1.8125 7.23817 1.86 6.18317C1.98417 3.494 3.24667 2.20733 5.95917 2.084C7.01417 2.0365 7.33 2.0265 10 2.0265ZM4.865 10.224C4.865 7.38817 7.16417 5.089 10 5.089C12.8358 5.089 15.135 7.38817 15.135 10.224C15.135 13.0607 12.8358 15.3598 10 15.3598C7.16417 15.3598 4.865 13.0598 4.865 10.224ZM10 13.5573C8.15917 13.5573 6.66667 12.0657 6.66667 10.224C6.66667 8.38317 8.15917 6.89067 10 6.89067C11.8408 6.89067 13.3333 8.38317 13.3333 10.224C13.3333 12.0657 11.8408 13.5573 10 13.5573ZM14.1375 4.8865C14.1375 4.224 14.675 3.6865 15.3383 3.6865C16.0008 3.6865 16.5375 4.224 16.5375 4.8865C16.5375 5.549 16.0008 6.0865 15.3383 6.0865C14.675 6.0865 14.1375 5.549 14.1375 4.8865Z" fill="#584D62"/>
+                            </svg>                                
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 
